turtleart.triangle.Triangle.scala.error
Compilation error:
Triangle:9: error: ')' expected but '}' found.
} 
^